@@ -1,6 +1,10 @@
 FlightPath 6.x Changelog
 ========================
 
+2023-03-23
+  Added CSV to acceptable file formats (by default) when uploading student files.
+
+
 2023-03-15
   Added new function to misc.inc to easily get all terms in a range.
   
